--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /POOI_Semana01/POOI_Semana01/.vs
 /POOI_Semana01/POOI_Sesion02/.vs
-/POOI_Semana02/POOI_Semana02/.vs
-/POOI_Semana02/POOI_Semana02/packages
+/POOI_Semana02/.vs
+/POOI_Semana02/packages
